# $Id: configure.in,v 1.20 2010-03-25 09:20:18 johanvdw Exp $
#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(saga, 2.0, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([src/saga_core/saga_gui/wksp_data_menu_files.cpp])
#AC_CONFIG_HEADER([config.h])
#AM_INIT_AUTOMAKE(saga, 2.0beta)
AM_INIT_AUTOMAKE(tar-ustar)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([float.h malloc.h memory.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_FUNC_STAT
AC_FUNC_STRTOD
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([floor memmove memset modf pow sqrt strchr strdup strerror strrchr strstr strtol])

# conditionals
AC_ARG_ENABLE(debug,
     [  --enable-debug	  Turn on debugging],
     [case "${enableval}" in
        yes) debug=true ;;
        no)  debug=false ;;
        *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
      esac],[debug=false])
      AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

AC_ARG_ENABLE(unicode,
     [  --enable-unicode	  Build with unicode support (wx has to be built with unicode support, too) ],
     [case "${enableval}" in
     	yes) unicode=true ;;
	no)  unicode=false ;;
	*) AC_MSG_ERROR(bad value ${enableval} for --enable-unicode) ;;
      esac],[unicode=false])
      AM_CONDITIONAL(SAGA_UNICODE, test "`wx-config --list | grep unicode`" != "" -a x$unicode = xtrue )

#AM_CONDITIONAL(X86_64, test "`uname -m`" = "x86_64")


#AC_CONFIG_FILES([Makefile])
AC_OUTPUT(Makefile \
	src/Makefile \
	src/saga_core/Makefile \
	src/saga_core/saga_api/Makefile \
	src/saga_core/saga_gdi/Makefile \
	src/saga_core/saga_cmd/Makefile \
	src/saga_core/saga_gui/Makefile \
	src/modules/Makefile \
	src/modules/grid/Makefile \
	src/modules/grid/grid_analysis/Makefile \
	src/modules/grid/grid_calculus/Makefile \
	src/modules/grid/grid_calculus_bsl/Makefile \
	src/modules/grid/grid_discretisation/Makefile \
	src/modules/grid/grid_filter/Makefile \
	src/modules/grid/grid_gridding/Makefile \
	src/modules/grid/grid_spline/Makefile \
	src/modules/grid/grid_tools/Makefile \
	src/modules/grid/grid_visualisation/Makefile \
	src/modules/pointcloud/Makefile \
	src/modules/pointcloud/pointcloud_tools/Makefile \
	src/modules/pointcloud/pointcloud_viewer/Makefile \
	src/modules/shapes/Makefile \
	src/modules/shapes/shapes_grid/Makefile \
	src/modules/shapes/shapes_lines/Makefile \
	src/modules/shapes/shapes_points/Makefile \
	src/modules/shapes/shapes_polygons/Makefile \
	src/modules/shapes/shapes_tools/Makefile \
    src/modules/shapes/shapes_transect/Makefile \
	src/modules/table/Makefile \
	src/modules/table/table_calculus/Makefile \
	src/modules/table/table_tools/Makefile \
	src/modules/tin/Makefile \
	src/modules/tin/tin_tools/Makefile \
	src/modules_contrib/Makefile \
	src/modules_contrib/contrib_a_perego/Makefile \
	src/modules_contrib/contrib_a_perego/contrib_a_perego/Makefile \
	src/modules_contrib/contrib_s_liersch/Makefile \
	src/modules_contrib/contrib_s_liersch/ihacres/Makefile \
	src/modules_geostatistics/Makefile \
	src/modules_geostatistics/geostatistics/Makefile \
	src/modules_geostatistics/geostatistics/geostatistics_points/Makefile \
	src/modules_geostatistics/geostatistics/geostatistics_grid/Makefile \
	src/modules_geostatistics/geostatistics/geostatistics_kriging/Makefile \
	src/modules_geostatistics/geostatistics/geostatistics_regression/Makefile \
	src/modules_images/Makefile \
	src/modules_images/modules_imagery/Makefile \
	src/modules_images/modules_imagery/imagery_segmentation/Makefile \
	src/modules_io/Makefile \
	src/modules_io/esri_e00/Makefile \
	src/modules_io/esri_e00/io_esri_e00/Makefile \
	src/modules_io/shapes/Makefile \
	src/modules_io/shapes/io_shapes/Makefile \
	src/modules_io/shapes/io_shapes_dxf/Makefile \
	src/modules_io/grid/Makefile \
	src/modules_io/grid/io_grid/Makefile \
	src/modules_io/grid/io_grid_image/Makefile \
	src/modules_io/grid/io_grid_grib2/Makefile \
	src/modules_io/gps/Makefile \
	src/modules_io/gps/io_gps/Makefile \
	src/modules_io/table/Makefile \
	src/modules_io/table/io_table/Makefile \
	src/modules_io/gdal/Makefile \
	src/modules_io/gdal/io_gdal/Makefile \
	src/modules_lectures/Makefile \
	src/modules_lectures/lectures/Makefile \
	src/modules_lectures/lectures/lectures_introduction/Makefile \
	src/modules_projection/Makefile \
	src/modules_projection/pj_georeference/Makefile \
	src/modules_projection/pj_georeference/pj_georeference/Makefile \
	src/modules_projection/pj_proj4/Makefile \
	src/modules_projection/pj_proj4/pj_proj4/Makefile \
	src/modules_recreations/Makefile \
	src/modules_recreations/recreations/Makefile \
	src/modules_recreations/recreations/recreations_fractals/Makefile \
	src/modules_recreations/recreations/recreations_games/Makefile \
	src/modules_simulation/Makefile \
	src/modules_simulation/hydrology/Makefile \
	src/modules_simulation/hydrology/sim_hydrology/Makefile \
	src/modules_simulation/cellular_automata/Makefile \
	src/modules_simulation/cellular_automata/sim_cellular_automata/Makefile \
	src/modules_simulation/ecosystems/Makefile \
	src/modules_simulation/ecosystems/sim_ecosystems_hugget/Makefile \
	src/modules_simulation/fire/Makefile \
	src/modules_simulation/fire/sim_fire_spreading/Makefile \
	src/modules_terrain_analysis/Makefile \
	src/modules_terrain_analysis/terrain_analysis/Makefile \
	src/modules_terrain_analysis/terrain_analysis/ta_channels/Makefile \
	src/modules_terrain_analysis/terrain_analysis/ta_hydrology/Makefile \
	src/modules_terrain_analysis/terrain_analysis/ta_lighting/Makefile \
	src/modules_terrain_analysis/terrain_analysis/ta_morphometry/Makefile \
	src/modules_terrain_analysis/terrain_analysis/ta_preprocessor/Makefile \
	src/modules_terrain_analysis/terrain_analysis/ta_profiles/Makefile \
)
